# src/main/java/com/example/expense/dto/request/UpdateExpenseItemRequest.java
@@ -1,0 +1,17 @@
+package com.example.expense.dto.request;
+
+import jakarta.validation.constraints.Positive;
+
+public class UpdateExpenseItemRequest extends ExpenseItemRequest {
+
+    @Positive
+    private Long id;
+
+    public Long getId() {
+        return id;
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+}
